--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -145,3 +145,11 @@ li {
   padding: 1rem;
   list-style: none;
 }
+
+.error-div {
+  outline: 2px solid yellow;
+  margin: 10px 0px;
+  padding: 10px;
+  border-radius: 5px;
+  display: inline-block;
+}
