--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -157,3 +157,13 @@ li {
 .close {
   background-color: #898c8b;
 }
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: 10;
+  background-color: rgba(0, 0, 0, 0.3);
+}
